# Full-Scene-Animation

./: .gitignore  CMakeLists.txt  README.md  SBE306B_Spring20_Project_Group_.cpp  SBE306B_Spring20_Project_Group_05.cpp  startRendering.cpp  startRendering.hpp  taburet1_update.mtl  texture.cpp  texture.hpp
data/: dolphins.mtl
imageLoader/: imageloader.cpp
include/: glm.h  objLoader.h
src/: glm.cpp  objLoader.cpp
